fix spacing

--- a/themes/lost/static/css/custom.css
+++ b/themes/lost/static/css/custom.css
@@ -107,7 +107,7 @@ h6 { font-size: 1em; }
 
 h1, h2, h3, h4, h5, h6 {
 	margin-top: 0;
-	margin-bottom: 1.5rem;
+	margin-bottom: 0;
 	font-weight: 500;
 	font-family: "Gintronic", Consolas, Menlo, monospace;
 }
